assets/stylesheets/index.scss
$font-family-sans-serif: 'Open Sans', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
$gold: #8f6b23;
$light-gold: lighten($gold, 30%);
$body-color: #495057;
$link-decoration: none;

$border-radius: 0;

$primary: $gold;

$form-floating-label-opacity: 1;

@import "~bootstrap/scss/bootstrap";

html {
  @supports (-webkit-touch-callout: none) {
    height: -webkit-fill-available;
  }

  body {
    background: #1d4634 url(../images/background.webp) no-repeat center center fixed;
    background-size: cover;
    min-height: 100vh;

    @supports (-webkit-touch-callout: none) {
      min-height: -webkit-fill-available;
    }

    padding: $spacer;

    display: flex;
    align-items: center;

    .cursive {
      font-family: 'Great Vibes', cursive;
      font-weight: 100;
    }

    .page-wrapper, .banner {
      border: 1rem solid #fff;
      background-color: rgba(#fff, 0.9);
      width: 100%;
      max-width: 800px;
      margin: auto;
      backdrop-filter: blur(5px);
      box-shadow: $box-shadow;
    }

    .page-wrapper {
      padding: $spacer;

      h1, h2 {
        line-height: 1;
        padding-bottom: 0;
        margin-bottom: $spacer;
        font-weight: 300;
      }

      @include media-breakpoint-up(md) {
        padding: $spacer * 2;

        h1 {
          margin-bottom: $spacer * 2;
        }
      }
    }

    .banner {
      padding: $spacer * 2;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      h1 {
        padding-bottom: $spacer;
        margin-bottom: $spacer;
        border-bottom: 1px solid $light-gold;
      }

      .names {
        font-variant: small-caps;

        font-weight: 400;

        @include media-breakpoint-down(md) {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;

          font-size: 3rem;
          .amp {
            font-size: 2rem;
            line-height: 1;
            margin-bottom: -10px;
          }
        }

        @include media-breakpoint-up(md) {
          font-size: 4rem;
        }

        .gold {
          color: $gold;
        }
      }

      .action-row {
        align-self: stretch;
        margin-top: 1rem;
      }

      a.banner-link {
        color: $body-color;
        border-bottom: 1px dotted $light-gold;
      }
    }
  }
}

.btn-default {
  background-color: #fff;
  @include button-outline-variant($primary);
}

.form-floating {
  >label {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    color: $gray-600;
    max-width: 100%;
  }

  >select.form-select:not(:focus):not(:valid):not(:disabled) {
    ~label {
      transform: none;
      font-weight: 400;
      color: $gray-600;
    }
  }

  >.form-control.show-placeholder:focus {
    &::placeholder {
      color: $input-placeholder-color;
    }
  }

  >.form-control:focus,
  >.form-control:not(:placeholder-shown),
  >.form-select {
    ~label {
      color: $primary;
      font-weight: 600;
    }
  }

  >.form-control:-webkit-autofill {
    ~label {
      color: $primary;
      font-weight: 600;
    }
  }
}

